check-mark image not showing:fixed

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ input {
   padding-bottom: -25px;
 }
 
-.card-details {
+.card-info {
   padding: 12px;
   background: #edeff2;
   color: #646e7a;
